# afk-minecraft

./: main.py  pyproject.toml  window.py
