[tool.poetry]
name = "afk-minecraft"
version = "0.1.0"
description = ""
authors = ["Volodya Orlov <volodka.orlov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pynput = "^1.7.6"
tqdm = "^4.62.3"
pywin32 = "^303"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
